--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ ext['springCloudVersion'] = 'Greenwich.BUILD-SNAPSHOT'
 
 dependencies {
 	implementation('org.springframework.cloud:spring-cloud-config-server')
+	implementation('org.springframework.cloud:spring-cloud-starter-bus-amqp')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
